[package]
name = "mutual-tls"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
color-eyre = "0.6.3"
http = "1.1.0"
hyper = "1.5.0"
hyper-util = { version = "0.1.9", features = ["client", "client-legacy", "http1", "http2", "server"] }
itertools = "0.13.0"
rustls = { version = "0.23.14", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "io-util"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring", "logging", "tls12"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
x509-parser = "0.16.0"
